adjusts for layout issue on mobile awhen portfolio view has two columns

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -114,6 +114,7 @@
 		width: 40%;
 		margin-left: 5%;
 		margin-right: 5%;
+		height: 32em;
 	}
 }
 
